License id, poi-stats , bugfix on date filters when only one (#161)
* adding index on location cast to geography for getImagesFromPOI (#149)

* adding index on location as geography as getImagesFromPOI query is cast to geography

* changing back to single quotes from last commit

* changing default GLTF minFilter from NEAREST_MIPMAP_LINEAR to sharper LINEAR (#151)

* adding new table to define license types per image with filter added … (#152)

* adding new table to define license types per image with filter added to getImagesFromPOI

* changing default GLTF minFilter from NEAREST_MIPMAP_LINEAR to sharper LINEAR (#151)

* adding license type to getImagesFromPOI with new link on images and license_type tables

* add param to fetch near by images not in footprint

* License index improved spatial sql (#153)

* improve where clause on spatial query and adding license type index to images column

* filter only validated on POI fetch

* New api poi images grouped decades with image_ids - fix dates bug (#155)

* improve where clause on spatial query and adding license type index to images column

* filter only validated on POI fetch

* new POI_decades_count API - fix bug date min-max filters

* missing date min-max on new api POIStats

* removing min-date filter when date-shot is used (#157)

* Remove heavy sort db (#158)

* removing min-date filter when date-shot is used

* improve DB timing by sorted on API server not in DB

* view_type added to basic_attributes and poi stats orderby view_type (#159)

* removing models.geometadata only use image.location for footprint (#160)

* trigger deploy with wp in README.md

* cleaning getPoiStats

* adding recommended yarn files to ignores

* Remove .yarn files from repo and update .gitignore
