# app/api/images/images.openapi.params.yml
@@ -216,3 +216,19 @@
   example: 2000
   schema:
     type: number
+- name: license_type
+  in: query
+  description: Select only images whos license_type_id matches the code in the license_type table.
+  example: ['cc0', 'by', 'by-nd', 'by-nc-sa']
+  schema:
+    type: array
+    minItems: 1
+    maxItems: 7
+    items:
+      type: string
+- name: near_by_images
+  in: query
+  description: True eq images that either contain the specified point in their footprint or are within the specified maximum distance from the point. If false or omitted, only images that both contain the point and are within the maximum distance are returned.
+  example: true
+  schema:
+    type: boolean
